--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.8",
     "@mui/styled-engine": "^7.3.8",
     "@tailwindcss/vite": "^4.1.18",
+    "griddy-icons": "^0.1.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
