--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@tailwindcss/vite": "^4.1.18",
     "griddy-icons": "^0.1.2",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
+    "react-select": "^5.10.2",
     "recharts": "^3.7.0",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0"
@@ -32,6 +35,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
